# python-constraint

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  PKG-INFO  README  README.md  README.rst  RELEASE_PROCEDURE.md  build.py  cythonize_build.py  noxfile.py  pyproject.toml  setup.cfg  setup.py  setup_cythonize.py
.github/workflows/: build-test-python-package-2.yml  build-test-python-package-pull.yml  build-test-python-package.yml  publish-documentation.yml  publish-package.yml
constraint/: ___init__.py  __init__.py  all.c  all.py  compat.py  constraints.c  constraints.py  domain.c  domain.py  metadata.py  parser.c  parser.py  problem.c  problem.py  solvers.c  solvers.py  version.py
docs/: conf.py  index.rst  intro.rst  reference.rst  requirements.txt
docs/assets/logo/: N-Queens_problem_Python.icns
docs/source/: reference.rst
documentation/: Makefile  conf.py
documentation/source/: conf.py  constraint.rst  index.rst  intro.rst  modules.rst  reference.rst
examples/abc/: abc.py
examples/coins/: coins.py
examples/crosswords/: crosswords.py  large.mask  medium.mask  python.mask  small.mask
examples/einstein/: einstein.py
examples/queens/: queens.py
examples/rooks/: rooks.py
examples/studentdesks/: studentdesks.py
examples/sudoku/: sudoku.py
examples/wordmath/: seisseisdoze.py  sendmoremoney.py  twotwofour.py
examples/xsum/: xsum.py
tests/: benchmarks.py  setup_teardown.py  test_benchmark.py  test_compilation.py  test_constraint.py  test_doctests.py  test_parser.py  test_problem.py  test_solvers.py  test_some_not_in_set.py  test_toml_file.py  test_util_benchmark.py
