[metadata]
name = python-constraint
author = Gustavo Niemeyer
author_email = gustavo@niemeyer.net
license = BSD-2-Clause
description = python-constraint is a module implementing support for handling CSPs (Constraint Solving Problems) over finite domain
keywords =
    csp
    constraint
    solving
    problems
    problem
    solver
url = https://github.com/python-constraint/python-constraint
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    License :: OSI Approved :: BSD License

[options]
packages = find:
install_requires =

[options.extras_require]
dev = check-manifest; nose
test = coverage; nose

[bdist_wheel]
universal = 1

[bdist_rpm]
doc_files = README.rst
use_bzip2 = 1

[sdist]
formats = bztar
